--- a/OurVlog.html
+++ b/OurVlog.html
@@ -41,7 +41,7 @@ OurVlog.html
                 <p>The LIFE IMPROVEMENT PROJECT or The L.I.P. is a process in which we try to motivate and inspire others while we strive to enhance our lifestyle creating our own piece of heaven- a family. :) </p>
              </div>
              <div class="projects">
-                 <h2>Our Videos</h2>
+                 <h2>Videos</h2>
                  <p>Here are some of our featured Playlists:</p>
                 <ul>
                     <li>Playlist 1: The L.I.P.</li>
